@@ -1,0 +1,9 @@
+Title: Fixed exception when trying to edit not existing BI aggregation
+Level: 1
+Component: bi
+Compatible: compat
+Version: 1.2.8p22
+Date: 1494332654
+Class: fix
+
+
